Regression GT prep before training - solid training foundation

--- a/TPE_training/proj_seg_hardnet_a_20210821_1/proj_seg_hardnet_a/configs/rpnet_c_railsem19_seg.yml
+++ b/TPE_training/proj_seg_hardnet_a_20210821_1/proj_seg_hardnet_a/configs/rpnet_c_railsem19_seg.yml
@@ -9,6 +9,8 @@ data:
     path: None
     sbd_path: None
 training:
+    num_seg_classes: 19
+    num_reg_channels: 3
     train_iters: 90000
     batch_size: 8
     val_interval: 100
